--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,65 @@
-/* You can add global styles to this file, and also import other style files */
+@import "app/variable";
+@import "app/mixin";
+
+body {
+    background-color: #f5f5f5;
+    font-family: "Trirong", serif;
+}
+
+.btn-normal {
+    color: $main-grey;
+    border-radius: 50%;
+    padding: 5px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: #3a3a3a61 5px 5px 10px 0px, white -5px -7px 10px 0px, inset #3a3a3a45 -2px -1px 2px 0px, inset white 4px 6px 9px;
+    cursor: pointer;
+    &:active {
+        box-shadow: white 1px 1px 13px 6px, inset #3a3a3a45 0px 0px 11px 0px;
+    }
+}
+
+
+.main-content {
+    padding: 10px 20px; //safe area
+    height: calc(100vh - 6rem);
+    overflow-y: auto;
+}
+
+.big-circle {
+    color: $main-grey;
+    border-radius: 50%;
+    padding: 5px;
+    width: 400px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: #3a3a3a61 5px 5px 10px 0px, white -5px -7px 10px 0px, inset #3a3a3a45 -2px -1px 2px 0px, inset white 4px 6px 9px;
+}
+
+@include breakpoint-max($bp-small) {
+    .big-circle {
+        width: 200px;
+        height: 200px;
+    }
+}
+
+@include breakpoint-min-max($bp-small, $bp-large) {
+    .big-circle {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
