--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,5 @@
 <div class="header">
     <div></div>
     <div class="title">What to eat?</div>
-    <div class="menu btn-normal"><i class="fa fa-bars" style="font-size:20px"></i></div>
+    <div class="menu btn-responsive"><i class="fa fa-bars"></i></div>
 </div>
