--- a/src/app/random-generator/random-generator.component.scss
+++ b/src/app/random-generator/random-generator.component.scss
@@ -1,4 +1,54 @@
 
-.big-circle {
-    margin-top: 5rem;
+@import '../variable';
+@import '../mixin';
+
+.function-btn {
+    margin-top: 3rem;
+    width: 40rem;
+    justify-content: space-around;
+}
+
+@include breakpoint-max($bp-small) {
+    .function-btn {
+        width: 20rem;
+    }
+}
+
+@include breakpoint-min-max($bp-small, $bp-large) {
+    .function-btn {
+        width: 30rem;
+    }
+}
+
+.store {
+    margin-top: 2rem;
+    .store-name {
+        font-size: 2rem;
+        font-weight: 800;
+        color: $dark-grey;
+    }
+}
+
+.filter-options {
+    width: 100%;
+    margin-top: -6rem;
+    .option {
+        width: 100%;
+        justify-content: space-between;
+        margin-bottom: 0.5rem;
+        border-radius: 0.8rem;
+        padding: 0.4rem 0.7rem;
+        &:hover {
+            box-shadow: inset #35599d45 0px 0px 13px 5px, #ffffff -7px -2px 10px 1px;
+        }
+        .option-info {
+            .option-name {
+                font-weight: 800;
+            }
+            .option-choice {
+                font-size: 0.3rem;
+                margin-left: 1rem;
+            }
+        }
+    }
 }
