--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 body {
     background-color: #f5f5f5;
     font-family: "Trirong", serif;
+    color: $main-grey;
 }
 
 .btn-normal {
@@ -22,10 +23,49 @@ body {
     }
 }
 
+.btn-responsive {
+    color: $main-grey;
+    border-radius: 50%;
+    padding: 5px;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: #3a3a3a61 5px 5px 10px 0px, white -5px -7px 10px 0px, inset #3a3a3a45 -2px -1px 2px 0px, inset white 4px 6px 9px;
+    cursor: pointer;
+    &:active {
+        box-shadow: white 1px 1px 13px 6px, inset #3a3a3a45 0px 0px 11px 0px;
+    }
+    i {
+        font-size: 48px;
+    }
+}
+
+.btn-small-responsive {
+    color: $main-grey;
+    border-radius: 50%;
+    padding: 5px;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: #3a3a3a61 5px 5px 10px 0px, white -5px -7px 10px 0px, inset #3a3a3a45 -2px -1px 2px 0px, inset white 4px 6px 9px;
+    cursor: pointer;
+    &:active {
+        box-shadow: white 1px 1px 13px 6px, inset #3a3a3a45 0px 0px 11px 0px;
+    }
+    i {
+        font-size: 48px;
+    }
+}
+
+
 
 .main-content {
     padding: 10px 20px; //safe area
-    height: calc(100vh - 6rem);
+    height: calc(100vh - 8rem);
     overflow-y: auto;
 }
 
@@ -46,6 +86,22 @@ body {
         width: 200px;
         height: 200px;
     }
+    .btn-responsive {
+        padding: 5px;
+        width: 40px;
+        height: 40px;
+        i {
+            font-size: 24px;
+        }
+    }
+    .btn-small-responsive {
+        padding: 5px;
+        width: 30px;
+        height: 30px;
+        i {
+            font-size: 18px;
+        }
+    }
 }
 
 @include breakpoint-min-max($bp-small, $bp-large) {
@@ -53,11 +109,36 @@ body {
         width: 300px;
         height: 300px;
     }
+    .btn-responsive {
+        padding: 5px;
+        width: 60px;
+        height: 60px;
+        i {
+            font-size: 36px;
+        }
+    }
+    .btn-small-responsive {
+        padding: 5px;
+        width: 40px;
+        height: 40px;
+        i {
+            font-size: 24px;
+        }
+    }
 }
 
 .flex-row {
     display: flex;
     flex-direction: row;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.align-items-center {
+    align-items: center;
 }
 
 .justify-content-center {
