--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -1,6 +1,27 @@
-.dialog {
-    height: calc(100vh - 11rem);
-    background-color: pink;
-    position: absolute;
-    width: 96%;
+
+
+.modal {
+    background:rgba(0,0,0,.4);
+    cursor:pointer;
+    height:100%;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index:10000;
+    display: flex;
+    justify-content: center;
+    .dialog {
+        height: calc(100vh - 11rem);
+        background-color: white;
+        position: absolute;
+        width: 90%;
+        bottom: 0;
+        box-shadow: #3a3a3a61 0 0 6px 6px, white 0px 2px 9px 0px, inset #3a3a3a45 0 0 15px 2px;
+        border-radius: 0.8rem 0.8rem 0 0;
+        .title {
+            display: flex;
+            justify-content: center;
+            font-weight: 800;
+        }
+    }
 }
