--- a/src/app/random-generator/random-generator.component.html
+++ b/src/app/random-generator/random-generator.component.html
@@ -11,39 +11,17 @@
             <div class="btn-responsive" (click)="toggle()"><i class="fa fa-filter"></i></div>
         </div>
         <div class="filter-options flex-column align-items-center">
-            <div class="option flex-row align-items-center">
+            <div class="option flex-row align-items-center" *ngFor="let option of foodOptions">
                 <div class="option-info flex-column">
-                   <div class="option-name">Option Name</div>
-                   <div class="option-choice">Option Choice</div>
+                   <div class="option-name">{{option.type}}</div>
+                   <div class="option-choice">{{option.choice}}</div>
                 </div>
-                <div class="btn-small-responsive" (click)="openDialog()"><i class="fa fa-random"></i></div>
-            </div>
-            <div class="option flex-row align-items-center">
-                <div class="option-info flex-column">
-                    <div class="option-name">Option Name</div>
-                    <div class="option-choice">Option Choice</div>
-                 </div>
-                <div class="btn-small-responsive"><i class="fa fa-random"></i></div>
-            </div>
-            <div class="option flex-row align-items-center">
-                <div class="option-info flex-column">
-                    <div class="option-name">Option Name</div>
-                    <div class="option-choice">Option Choice</div>
-                 </div>
-                <div class="btn-small-responsive"><i class="fa fa-random"></i></div>
-            </div>
-            <div class="option flex-row align-items-center">
-                <div class="option-info flex-column">
-                    <div class="option-name">Option Name</div>
-                    <div class="option-choice">Option Choice</div>
-                 </div>
-                <div class="btn-small-responsive"><i class="fa fa-random"></i></div>
+                <div class="btn-small-responsive" (click)="openDialog(option)"><i class="fa fa-random"></i></div>
             </div>
         </div>
     </div>
 
 </div>
 
-<app-dialog [visible]="dialogVisible">
-    <div class="title">aaa</div>
+<app-dialog [dialogContent]="dialogContent">
 </app-dialog>
