--- a/src/app/random-generator/random-generator.component.scss
+++ b/src/app/random-generator/random-generator.component.scss
@@ -32,6 +32,10 @@
 .filter-options {
     width: 100%;
     margin-top: -6rem;
+    height: calc(100vh - 36rem);
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 0 1.1rem;
     .option {
         width: 100%;
         justify-content: space-between;
@@ -52,3 +56,14 @@
         }
     }
 }
+@include breakpoint-max($bp-small) {
+    .filter-options {
+        height: calc(100vh - 18rem);
+    }
+}
+@include breakpoint-min-max($bp-small, $bp-large) {
+    .filter-options {
+        height: calc(100vh - 27rem);
+    }
+}
+
