--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ body {
     background-color: #f5f5f5;
     font-family: "Trirong", serif;
     color: $main-grey;
+    overflow: hidden;
 }
 
 .btn-normal {
@@ -65,9 +66,8 @@ body {
 
 .main-content {
     padding: 10px 20px; //safe area
-    height: calc(100vh - 8rem);
-    overflow-y: auto;
 }
+
 
 .big-circle {
     color: $main-grey;
