--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -2,7 +2,6 @@
 
 .modal {
     background:rgba(0,0,0,.4);
-    cursor:pointer;
     height:100%;
     position:fixed;
     top:0;
@@ -22,6 +21,13 @@
             display: flex;
             justify-content: center;
             font-weight: 800;
+        }
+        .dialog-content {
+          padding: 5px 10px;
+          display: flex;
+          justify-content: center;
+          overflow: auto;
+          height: calc(100% - 50px);
         }
     }
 }
