--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,10 @@
 <div class="header">
     <div></div>
     <div class="title">What to eat?</div>
-    <div class="menu btn-responsive"><i class="fa fa-bars"></i></div>
+    <div class="menu btn-responsive" (click)="openSidebar()"><i class="fa fa-bars"></i>
+    </div>
 </div>
+
+<app-sidebar [content]="sidebarContent"></app-sidebar>
+
+
