--- a/src/app/random-generator/random-generator.component.scss
+++ b/src/app/random-generator/random-generator.component.scss
@@ -2,10 +2,38 @@
 @import '../variable';
 @import '../mixin';
 
+
+.big-circle {
+  margin-top: 3rem;
+  transform-origin: center top;
+  transform: scale(1);
+  transition: all ease-in 300ms;
+}
+
+.expand {
+  .big-circle {
+    margin-top: 1rem;
+    transform-origin: center top;
+    transform: scale(.65);
+  }
+  .store {
+    height: 0;
+    opacity: 0;
+  }
+}
+
 .function-btn {
-    margin-top: 3rem;
+    margin: 10px 0px;
     width: 40rem;
     justify-content: space-around;
+}
+
+.filter-btn {
+  position: relative;
+  top: -150px;
+  margin: 10px 0px;
+  width: 40rem;
+  justify-content: space-around;
 }
 
 @include breakpoint-max($bp-small) {
@@ -21,7 +49,10 @@
 }
 
 .store {
+    display: flex;
     margin-top: 2rem;
+    transition: all ease-in 300ms;
+    z-index: -1;
     .store-name {
         font-size: 2rem;
         font-weight: 800;
@@ -31,10 +62,8 @@
 
 .filter-options {
     width: 100%;
-    margin-top: -6rem;
-    // height: calc(100vh - 36rem);
-    // overflow-y: auto;
-    // overflow-x: hidden;
+    position: relative;
+    top: -150px;
     padding: 0 1.1rem;
     .option {
         width: 100%;
@@ -57,29 +86,76 @@
     }
 }
 .photo {
-    width: 300px;
-}
-@include breakpoint-max($bp-small) {
-    .filter-options {
-        // height: calc(100vh - 18rem);
-    }
-    .photo {
-        max-width: 230px;
-        max-height: 230px;
-    }
-}
-@include breakpoint-min-max($bp-small, $bp-large) {
-    .filter-options {
-        // height: calc(100vh - 27rem);
-    }
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
 
 .left-arrow {
-    position: relative;
+    position: absolute;
     left: -20px;
+    cursor: pointer;
 }
 
 .right-arrow {
-    position: relative;
+    position: absolute;
     right: -20px;
+    cursor: pointer;
+}
+
+
+.dialog-options {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  input {
+    display: none;
+  }
+  input:checked ~ .option::after {
+    background-color: $dark-grey;
+    transform-origin: left top;
+    height: 2px;
+    transform: translateX(-10px) rotate(45deg);
+    border-radius: 80%;
+  }
+  input:checked ~ .option::before {
+    background-color: $dark-grey;
+    transform-origin: left bottom;
+    width: 2px;
+    transform: scaleY(2.5) translateX(-8px) rotate(58deg);
+    border-radius: 80%;
+  }
+  input:checked ~ .option {
+    background-color: #0430a533;
+    border-radius: 10px;
+    box-shadow: inset #434e7554 2px 2px 7px 0px;
+  }
+  .option {
+    position: relative;
+    display: flex;
+    align-items: center;
+    transition: all 0.5s;
+    padding: 10px;
+    margin: 2px 0;
+    color: #000000;
+  }
+  .option::after {
+    content: '';
+    position: absolute;
+    background-color: $main-grey;
+    width: 10px;
+    height: 1px;
+    right: 0;
+    transition: all .4s;
+  }
+  .option::before {
+    content: '';
+    position: absolute;
+    background-color: $main-grey;
+    width: 1px;
+    height: 10px;
+    right: 5px;
+    transition: all .4s;
+  }
 }
