--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
     font-family: "Trirong", serif;
     color: $main-grey;
     overflow: hidden;
+    margin: 0;
 }
 
 .btn-normal {
@@ -67,7 +68,7 @@ body {
 .main-content {
     padding: 10px 20px; //safe area
     overflow-y: auto;
-    height: calc(var(--vh) - 80px);
+    // height: calc(var(--vh) - 80px);
 }
 
 
@@ -80,7 +81,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: #3a3a3a61 5px 5px 10px 0px, white -5px -7px 10px 0px, inset #3a3a3a45 -2px -1px 2px 0px, inset white 4px 6px 9px;
+    box-shadow: #3a3a3a61 1px 2px 13px 5px, white -5px -7px 10px 0px, inset #3a3a3a45 -2px -1px 2px 0px, inset white 4px 6px 9px;
 }
 
 @include breakpoint-max($bp-small) {
