i18n and setting page finished

--- a/ClientApp/src/app/dialog/dialog.component.html
+++ b/ClientApp/src/app/dialog/dialog.component.html
@@ -1,6 +1,6 @@
-<div class="modal" *ngIf="dialogContent.visible" (clickOutside)="close()">
+<div class="modal" *ngIf="dialogContent.visible" [isModal]="true" (clickOutside)="close()">
     <div class="dialog" [@dialog]>
-        <div class="title">{{dialogContent.type?.name}}</div>
+        <div class="title">{{(dialogContent.type?.name + '.title' || '') | translate}}</div>
         <div class="dialog-content">
           <ng-content></ng-content>
         </div>
