--- a/ClientApp/src/app/dialog/dialog.component.scss
+++ b/ClientApp/src/app/dialog/dialog.component.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     .dialog {
-        height: calc(100vh - 11rem);
+        height: calc(100dvh - 15rem);
         background-color: white;
         position: absolute;
         width: 90%;
