--- a/ClientApp/src/app/random-generator/random-generator.component.html
+++ b/ClientApp/src/app/random-generator/random-generator.component.html
@@ -1,33 +1,34 @@
 <div class="main-content">
-    <div class="flex-column align-items-center" [ngClass]="{'expand': isFilter}">
-        <div class="big-circle">
-            <div class="left-arrow" *ngIf="photoIndex > 0" (click)="getPhoto(-1)"><i class="fa fa-chevron-left"></i></div>
-            <img class="photo" [src]="result?.photoReferences?.[photoIndex]" alt="photo">
-            <div class="right-arrow" *ngIf="photoIndex < result?.photoReferences?.length! - 1" (click)="getPhoto(1)"><i class="fa fa-chevron-right"></i></div>
+  <div class="flex-column align-items-center" [ngClass]="{'expand': isFilter}">
+    <div class="big-circle">
+      <div class="left-arrow" *ngIf="photoIndex > 0" (click)="getPhoto(-1)"><i class="fa fa-chevron-left"></i></div>
+      <img *ngIf="result?.photoReferences" class="photo" [src]="result?.photoReferences?.[photoIndex]" alt="">
+      <div class="right-arrow" *ngIf="photoIndex < result?.photoReferences?.length! - 1" (click)="getPhoto(1)"><i
+          class="fa fa-chevron-right"></i></div>
+    </div>
+    <div class="store flex-column align-items-center" *ngIf="!isFilter">
+      <div class="store-name" (click)="openWebsite(result.website)">{{result?.name}}</div>
+      <div class="store-info">{{result?.address}}</div>
+    </div>
+    <div class="function-btn flex-row" *ngIf="!isFilter" [@fadeInOutWithSlide]>
+      <div class="btn-responsive" (click)="clear()"><i class="fa fa-trash"></i></div>
+      <div class="btn-responsive" (click)="random()"><i class="fa fa-random"></i></div>
+      <div class="btn-responsive" (click)="toggle()"><i class="fa fa-filter"></i></div>
+    </div>
+    <div class="function-btn filter-btn flex-row" *ngIf="isFilter" [@fadeInOut]>
+      <div class="btn-responsive" (click)="toggle()"><i class="fa fa-close"></i></div>
+      <div class="btn-responsive" (click)="random()"><i class="fa fa-check"></i></div>
+    </div>
+    <div class="filter-options flex-column align-items-center" *ngIf="isFilter" [@optionSlide]>
+      <div class="option flex-row align-items-center" *ngFor="let option of foodOptions">
+        <div class="option-info flex-column">
+          <div *ngIf="option" class="option-name">{{ (option.name? option.name + '.title' : '') | translate}}</div>
+          <div class="option-choice" *ngFor="let op of option.choice">{{ op | optionName: option.type | translate}}</div>
         </div>
-        <div class="store flex-column align-items-center">
-            <div class="store-name" (click)="openWebsite(result.website)">{{result?.name}}</div>
-            <div class="store-info">{{result?.address}}</div>
-        </div>
-        <div class="function-btn flex-row" *ngIf="!isFilter" [@fadeInOutWithSlide]>
-            <div class="btn-responsive" (click)="clear()"><i class="fa fa-trash"></i></div>
-            <div class="btn-responsive" (click)="random()"><i class="fa fa-random"></i></div>
-            <div class="btn-responsive" (click)="toggle()"><i class="fa fa-filter"></i></div>
-        </div>
-        <div class="function-btn filter-btn flex-row" *ngIf="isFilter" [@fadeInOut]>
-          <div class="btn-responsive" (click)="toggle()"><i class="fa fa-close"></i></div>
-          <div class="btn-responsive" (click)="random()"><i class="fa fa-check"></i></div>
-      </div>
-      <div class="filter-options flex-column align-items-center" *ngIf="isFilter" [@optionSlide]>
-          <div class="option flex-row align-items-center" *ngFor="let option of foodOptions">
-              <div class="option-info flex-column">
-                  <div *ngIf="option" class="option-name">{{ (option.name? option.name + '.title' : '') | translate}}</div>
-                  <div class="option-choice" *ngFor="let op of option.choice">{{ op | optionName: option.type}}</div>
-              </div>
-              <div class="btn-small-responsive" (click)="openDialog(option)"><i class="fa fa-random"></i></div>
-          </div>
+        <div class="btn-small-responsive" (click)="openDialog(option)"><i class="fa fa-random inside-area"></i></div>
       </div>
     </div>
+  </div>
 
 </div>
 
@@ -35,8 +36,10 @@
   <ng-container>
     <div class="dialog-options">
       <div *ngFor="let option of dialogContent.type?.choice let i=index">
-        <input type="checkbox" id="{{'option-' + i}}" [(ngModel)]="option.isChecked" (change)="optionOnClick(option, dialogContent.type)">
-        <label for="{{'option-' + i}}" class="option">{{ (option.choice ? option.choice.toString() : '') | translate}}</label>
+        <input type="checkbox" id="{{'option-' + i}}" [(ngModel)]="option.isChecked"
+          (change)="optionOnClick(option, dialogContent.type)">
+        <label for="{{'option-' + i}}" class="option">{{ (option.choice ? option.choice.toString() : '') |
+          translate}}</label>
       </div>
     </div>
   </ng-container>
